updated documents based on changes to homework-three

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
     <html>
         <head>
+        <meta charset="utf-8">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,300|Droid+Serif:400italic,700italic' rel='stylesheet' type='text/css'>   <title>Sixteen Creative Agency</title>
-            <meta charset="utf-8">
             <link rel="stylesheet" href="css/style.css">
         </head>
         <body>
-            <section id="navigation">
-            <nav id="nav">
-                <img src="images/sixteen-logo.png">
-                 <a>    
+            <header>
+            <nav>
+                <img src="images/sixteen-logo.png">    
                 <ul>
                 <li class="active">home</li>
                 <li>about</li>
@@ -20,16 +19,15 @@
                 <li>blog</li>
                 <li>contact</li>
                 </ul>
-                </a>
             </nav>
-            </section>
-            <section id="intro">
+            </header>
+            <section class="hero">
             <h1>we are sixteen creative agency</h1>
                 <h2>Based in Jakarta, Indonesia</h2>
                 <img id="arrow" src="images/arrow.png">
                 <img id="siluet" src=
 "images/siluet.png">            </section>
-            <section id="who-we-are">
+            <section class="about">
                 <div class="wrapper">
                 <div id="text">
                 <img id="human" src="images/human.png">
