--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             <nav class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+            <div class="container navbar-right" id="button-background">
+            <img class="navbar-toggle collapsed" id="hamburger" data-toggle="collapse" data-target="#navbar" src="images/icon.png">
+<!--            <div class="navbar-toggle collapsed" id="hamburger" data-toggle="collapse" data-target="#navbar" img src="images/icon.png">-->
                 <span class="sr-only">Toggle navigation</span>
-                <span><img id="hamburger" src="images/icon.png"></span>
-            </button>
+            </div>
+            </div>
             <a class="navbar-brand navbar-left" href="#"><img src="images/sixteen-logo.png"></a>
         </div>
 
